# movie-recommendation-rag

./: .gitignore  README.md  pyproject.toml
rag/: main_chroma.py  main_qdrant.py
tests/: test_rag.py
